# comfyui-ayfdiy

./: README.md  __init__.py  ayf_is_empty.py  ayf_logger.py  ayf_path_loader.py  ayf_prompt_map_node.py  logger.py  prompt_maps.toml  pyproject.toml  requirements.txt
.claude/plans/: 2026-02-28-prompt-map-instance-isolation-design.md  2026-02-28-prompt-map-isolation-impl.md
tests/: test_ayf_path_loader_regression.py  test_ayf_prompt_map_node.py
web/extensions/: ayf_prompt_map_manager.js
